--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ja">
 <head>
   <meta charset="utf-8">
-  <title>Quiz</title>
+  <title>鹿児島クイズ</title>
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
