レスポンシブ対応

--- a/index.html
+++ b/index.html
@@ -2,8 +2,12 @@
 <html lang="ja">
 <head>
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width,initial-scale=1.0">
   <title>鹿児島クイズ</title>
   <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" media="(min-width: 640px)" href="common/styles/style_pc.css">
+  <link rel="stylesheet" media="(max-width: 640px)" href="common/styles/style_mobile.css">
+
 </head>
 <body>
   <section class="container">
